# bias-eval-env

./: .gitignore  README.md
environments/bias_consistency/: CROSS_LANGUAGE_SUCCESS.md  README.md  __init__.py  pyproject.toml  vf_bias_consistency.py
environments/bias_consistency/bias_consistency/: __init__.py
environments/bias_consistency/bias_consistency/data/: questions_ar.json  questions_de.json  questions_en.json  questions_fa.json  questions_fr.json  questions_he.json  questions_hi.json  questions_ja.json  questions_ko.json  questions_nl.json  questions_pt.json  questions_ru.json  questions_sv.json  questions_zh.json
examples/: ollama_test.py
